Normalized method for dynamic getters. BREAKING CHANGE: defaults() should now be static.

--- a/help/render_patterns.help.ini
+++ b/help/render_patterns.help.ini
@@ -6,11 +6,19 @@ readme file = 0
 title = "Drupal Module: Render Patterns"
 weight = -10
 
+[CHANGELOG]
+title = "Changelog"
+weight = 0
+
 [arrays]
 title = "Using arrays when implementing a pattern"
-weight = 0
+weight = 1
+
+[defaults]
+title = "Defaults"
+weight = 2
 
 [display_suite]
 title = "Display Suite Integration"
-weight = 1
+weight = 3
 
