--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 !/.web_package/hooks
 /.web_package/hooks/*
 !/.web_package/hooks/build
-docs/kit
 LICENSE.txt
-docs/source/auto-generated.outline.json
-help/auto-generated.outline.json
+/documentation/core
+/documentation/README.md
+/help/outline.merge.json
+
