--- a/help/render_patterns.help.ini
+++ b/help/render_patterns.help.ini
@@ -22,3 +22,11 @@ weight = 3
 title = "Display Suite Integration"
 weight = 4
 
+[properties]
+title = "Object Properties"
+weight = 5
+
+[validation]
+title = "Property Validation"
+weight = 6
+
