--- a/help/render_patterns.help.ini
+++ b/help/render_patterns.help.ini
@@ -6,27 +6,31 @@ readme file = 0
 title = "Changelog"
 weight = 0
 
-[README]
-title = "Drupal Module: Render Patterns"
-weight = 1
-
-[arrays]
-title = "Using arrays when implementing a pattern"
-weight = 2
-
-[defaults]
-title = "Defaults"
-weight = 3
-
 [display_suite]
 title = "Display Suite Integration"
-weight = 4
+weight = 1
+
+[README]
+title = "Drupal Module: Render Patterns"
+weight = 2
 
 [properties]
 title = "Object Properties"
-weight = 5
+weight = 3
+
+[dependency-injection]
+title = "Patterns and Dependency Injection"
+weight = 4
 
 [validation]
 title = "Property Validation"
+weight = 5
+
+[ROADMAP]
+title = "Roadmap"
 weight = 6
+
+[arrays]
+title = "Using arrays when implementing a pattern"
+weight = 7
 
