--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "license": "GPL-2.0-or-later",
     "require": {
         "justinrainbow/json-schema": "^5.2",
         "aklump/data": "^0.0.28"
