--- a/render_patterns.services.yml
+++ b/render_patterns.services.yml
@@ -1,7 +1,7 @@
 services:
   render_patterns.factory:
     class: Drupal\render_patterns\PatternFactory
-    arguments: ['@data_api']
+    arguments: []
   render_patterns.autoloader:
     class: Drupal\render_patterns\EventSubscriber\PatternAutoloader
     tags:
