--- a/help/render_patterns.help.ini
+++ b/help/render_patterns.help.ini
@@ -6,28 +6,28 @@ readme file = 0
 title = "Changelog"
 weight = 0
 
-[display_suite]
-title = "Display Suite Integration"
-weight = 1
-
 [README]
 title = "Drupal Module: Render Patterns"
-weight = 2
+weight = 1
 
 [properties]
 title = "Object Properties"
-weight = 3
+weight = 2
 
 [dependency-injection]
 title = "Patterns and Dependency Injection"
-weight = 4
+weight = 3
 
 [validation]
 title = "Property Validation"
-weight = 5
+weight = 4
 
 [ROADMAP]
 title = "Roadmap"
+weight = 5
+
+[update-v2]
+title = "Update V2"
 weight = 6
 
 [arrays]
