add installation instructions for composer private repo.

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "name": "drupal/render-patterns",
+    "type": "private",
+    "authors": [
+        {
+            "name": "aklump",
+            "email": "sourcecode@intheloftstudios.com"
+        }
+    ],
     "license": "GPL-2.0-or-later",
     "require": {
         "justinrainbow/json-schema": "^5.2",
