--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "justinrainbow/json-schema": "^5.2",
-        "aklump/data": "^0.0.28"
+        "aklump/data": "^0.0.28",
+        "aklump/default-value": "^0.0.2"
     },
     "autoload-dev": {
         "psr-4": {
