remove the 4.x branch commits (wrong branch)

--- a/help/render_patterns.help.ini
+++ b/help/render_patterns.help.ini
@@ -14,7 +14,11 @@ weight = 1
 title = "Problems With Array Overloading"
 weight = 2
 
+[ROADMAP]
+title = "Roadmap"
+weight = 3
+
 [services]
 title = "Using Services (Dependency Injection)"
-weight = 3
+weight = 4
 
