--- a/render_patterns.info.yml
+++ b/render_patterns.info.yml
@@ -1,7 +1,7 @@
 name: 'Render Patterns'
 description: 'Encapsulate render arrays as PHP classes for re-usability.'
 package: 'In the Loft Studios'
-core: 8.x
+core_version_requirement: ^8 || ^9
 version: 8.x-4.0.0
 php: 7.1
 author: aklump
