--- a/render_patterns.info.yml
+++ b/render_patterns.info.yml
@@ -2,8 +2,8 @@ name: 'Render Patterns'
 description: 'Encapsulate render arrays as PHP classes for re-usability.'
 package: 'In the Loft Studios'
 core: 8.x
-core_version_requirement: ^8 || ^9
-version: 8.x-4.0.0
+core_version_requirement: '^8 || ^9'
+version: 8.x-4.1
 php: 7.1
 author: aklump
 type: module
