--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
-    "name": "drupal/render-patterns",
-    "type": "private",
+    "name": "aklump_drupal/render_patterns",
+    "type": "drupal-custom-module",
     "authors": [
         {
             "name": "aklump",
             "email": "sourcecode@intheloftstudios.com"
         }
     ],
+    "homepage" :"https://github.com/aklump/drupal_render_patterns",
     "license": "GPL-2.0-or-later",
     "require": {
         "justinrainbow/json-schema": "^5.2",
