--- a/render_patterns.info.yml
+++ b/render_patterns.info.yml
@@ -3,7 +3,7 @@ description: 'Encapsulate render arrays as PHP classes for re-usability.'
 package: 'In the Loft Studios'
 core: 8.x
 core_version_requirement: '^8 || ^9'
-version: 8.x-4.1.2
+version: 4.1.2
 php: 7.1
 author: aklump
 type: module
