update knowledge data

--- a/knowledge/index.yml
+++ b/knowledge/index.yml
@@ -1,5 +1,6 @@
 page_order:
-  - readme
-  - services
-  - arrays
-  - changelog
+  general:
+    - readme
+    - services
+    - arrays
+    - changelog
