--- a/render_patterns.info.yml
+++ b/render_patterns.info.yml
@@ -2,7 +2,7 @@ name: 'Render Patterns'
 description: 'Encapsulate render arrays as PHP classes for re-usability.'
 package: 'In the Loft Studios'
 core: 8.x
-core_version_requirement: '^8 || ^9'
+core_version_requirement: '^8 || ^9 || ^10'
 version: 4.1.6
 php: 7.1
 author: aklump
